--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap");
+* {
+  font-family: "Inter", sans-serif;
+}
 .container {
-  width: 280px;
+  width: 320px;
   color: #314d3e;
+  font-family: "Inter", sans-serif;
+  padding: 20px;
+  padding-top: 0;
 }
 
 .title {
@@ -28,23 +35,24 @@
 
 .bookmark {
   display: flex;
-  border-bottom-color: #00254d;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
+  justify-content: center;
+  align-items: center;
   border-radius: 0.8rem;
-  padding: 3px;
-  padding-bottom: 7px;
-  margin-bottom: 7px;
+  padding: 20px 4px;
+  margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .bookmark-title {
+  font-size: 20px;
   padding-left: 2px;
+  color: #9b9b9b;
 }
 
 .bookmark-controls img {
-  margin: 0 4px;
-  width: 18px;
-  height: 18px;
+  margin: 0 8px;
+  width: 25px;
+  height: auto;
   cursor: pointer;
 }
 .bookmark-controls {
